Modified Request interface to use URI rather than URL